# Canary

./: .gitignore  Cargo.toml  README.md  build-wasm.sh  package.json
crates/canary-cpu/: Cargo.toml
crates/canary-cpu-arm64/: Cargo.toml
crates/canary-cpu-arm64/src/: decoder.rs  interpreter.rs  lib.rs  reg.rs
crates/canary-cpu/src/: decoder.rs  flags.rs  interpreter.rs  lib.rs  registers.rs
crates/canary-elf/: Cargo.toml
crates/canary-elf/src/: auxv.rs  lib.rs  parser.rs  types.rs
crates/canary-fb/: Cargo.toml
crates/canary-fb/src/: lib.rs
crates/canary-fs/: Cargo.toml
crates/canary-fs/src/: ext2.rs  lib.rs
crates/canary-input/: Cargo.toml
crates/canary-input/src/: keycodes.rs  lib.rs
crates/canary-io/: Cargo.toml
crates/canary-io/src/: lib.rs
crates/canary-jit/: Cargo.toml
crates/canary-jit/src/: block.rs  emitter.rs  lib.rs  runtime.rs
crates/canary-memory/: Cargo.toml
crates/canary-memory/src/: lib.rs
crates/canary-net/: Cargo.toml
crates/canary-net/src/: lib.rs  syscalls.rs
crates/canary-syscall/: Cargo.toml
crates/canary-syscall/src/: dispatch.rs  lib.rs  numbers.rs
crates/canary-thread/: Cargo.toml
crates/canary-thread/src/: lib.rs
crates/canary-wasm/: Cargo.toml
crates/canary-wasm/src/: ext2_remote.rs  lib.rs
harness/: canary-host.mjs  index.html  server.mjs  tcp-proxy.mjs  worker.mjs
js/: package.json
js/src/: devices.ts  index.ts  linux.ts
steam/: prepare-image-64.sh
