[workspace]
resolver = "2"
members = [
    "crates/canary-elf",
    "crates/canary-cpu",
    "crates/canary-cpu-arm64",
    "crates/canary-memory",
    "crates/canary-syscall",
    "crates/canary-fs",
    "crates/canary-fb",
    "crates/canary-thread",
    "crates/canary-jit",
    "crates/canary-net",
    "crates/canary-io",
    "crates/canary-input",
    "crates/canary-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Canary Contributors"]
license = "MIT OR Apache-2.0"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"

[workspace.dependencies]
canary-memory = { path = "crates/canary-memory" }
thiserror   = "1"
log         = "0.4"
wasm-bindgen = "0.2"
js-sys      = "0.3"
web-sys     = { version = "0.3", features = ["console"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
bitflags    = "2"
wasm-encoder = "0.245.1"
