[package]
name = "canary-syscall"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
log.workspace = true
canary-memory  = { path = "../canary-memory" }
canary-fs      = { path = "../canary-fs" }
canary-fb      = { path = "../canary-fb" }
canary-thread  = { path = "../canary-thread" }
canary-net     = { path = "../canary-net" }
