[package]
name = "canary-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true
log.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
canary-elf      = { path = "../canary-elf" }
canary-cpu      = { path = "../canary-cpu" }
canary-cpu-arm64 = { path = "../canary-cpu-arm64" }
canary-memory   = { path = "../canary-memory" }
canary-syscall  = { path = "../canary-syscall" }
canary-fs       = { path = "../canary-fs" }
canary-fb       = { path = "../canary-fb" }
canary-thread   = { path = "../canary-thread" }
canary-jit      = { path = "../canary-jit" }
canary-net      = { path = "../canary-net" }
canary-input    = { path = "../canary-input" }
canary-io       = { path = "../canary-io" }

